make a little wish
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@546 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -44,6 +44,9 @@ sfmtD11_alti: sfmtD11_alti.c test_time3.c  paramsD11.h
 sfmtDPf_alti: sfmtDPf_alti.c test_time3.c  paramsDPf.h
 	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ sfmtDPf_alti.c
 
+sfmtDPza_alti: sfmtDPza.c test_time3.c  paramsDPza.h
+	${CC} -faltivec -maltivec ${CCFLAGS} -DALTIVEC -o $@ sfmtDPza.c
+
 sfmtX78_alti: sfmtX78_alti.c test_time3.c
 	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ sfmtX78_alti.c
 
