remember the milk
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@552 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -56,6 +56,9 @@ sfmtX78_org_alti: sfmtX78_alti.c test_time4.c
 mt_msk_alti: mt_msk_alti.c test_time3.c
 	${CC} -faltivec -maltivec ${CCFLAGS} -o $@ mt_msk_alti.c
 
+mt19937ar_alti: mt19937ar.c test_time2.c
+	${CC} -faltivec -maltivec ${CCFLAGS} -DALTIVEC -o $@ mt19937ar.c
+
 ##### SSE2 ####
 sfmtD01_sse2: sfmtD01_sse2.c test_time.c  paramsD01.h
 	${CC} ${CCFLAGS} -o $@ sfmtD01_sse2.c
