zc ha yokunai mitai
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@576 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto2/Makefile
+++ b/dSFMT/proto2/Makefile
@@ -61,6 +61,9 @@ param-searchDPza-521: sfmtDPza.cpp search.o
 param-searchDPzb-521: sfmtDPzb.cpp search.o
 	${CPP} -o $@ sfmtDPzb.cpp search.o ${LINKOPT}
 
+param-searchDPzc-521: sfmtDPzc.cpp search.o
+	${CPP} -o $@ sfmtDPzc.cpp search.o ${LINKOPT}
+
 param-searchDPza-1279: sfmtDPza.cpp search.o
 	${CPP} -o $@ sfmtDPza.cpp search.o ${LINKOPT}
 
