--- a/dSFMT/util/Makefile
+++ b/dSFMT/util/Makefile
@@ -1,27 +1,10 @@
 #for GNU make
 
-#DMEXP = -DMEXP=521
-%521:MEXP=521
-%607:MEXP=607
-%1279:MEXP=1279
-%2203:MEXP=2203
-#%2281:MEXP=2281
-%4253:MEXP=4253
-#%4423:MEXP=4423
-%11213:MEXP=11213
-%19937:MEXP=19937
-%44497:MEXP=44497
-%86243:MEXP=86243
-%132049:MEXP=132049
-%216091:MEXP=216091
-
 #DDEBUG = -O0 -g
 
-DMEXP = -DMEXP=${MEXP}
-
 CC = gcc -Wall -O9 -Wmissing-prototypes -I/opt/local/include \
-	-L. $(DDEBUG) $(DMEXP) $(DPG)
-CPP = g++ -Wall -O9 -I/opt/local/include -L. $(DDEBUG) $(DMEXP) $(DPG)
+	-L. $(DDEBUG) $(DPG)
+CPP = g++ -Wall -O9 -I/opt/local/include -L. $(DDEBUG) $(DPG)
 
 LINKOPT = -ldsfmt -lntl -lgmp
 
@@ -33,6 +16,9 @@ shortest-baseDPz2-607: sfmtDPz2.o chk-shortest.o libdsfmt.a
 
 libdsfmt.a: mt19937blk.o util.o dsfmt-util.o shortbase104.o
 	ar -rLsv libdsfmt.a mt19937blk.o util.o dsfmt-util.o shortbase104.o 
+
+test-util: util.cpp test-util.cpp
+	${CPP} -o $@ util.cpp test-util.cpp ${LINKOPT}
 
 .cpp.o:
 	${CPP} -c $<
