change not to output first status
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@624 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto2/Makefile
+++ b/dSFMT/proto2/Makefile
@@ -184,6 +184,9 @@ test-genDPza-11213: sfmtDPza.cpp test-gen.cpp
 test-genDPza-19937: sfmtDPza.cpp test-gen.cpp
 	${CPP} -o $@ sfmtDPza.cpp test-gen.cpp ${LINKOPT}
 
+test-minpolyDPza-86243: sfmtDPza.cpp test-minpoly.o
+	${CPP} -o $@ sfmtDPza.cpp test-minpoly.o ${LINKOPT}
+
 .cpp.o:
 	${CPP} -c $<
 
