search param sl1
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@631 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto2/Makefile
+++ b/dSFMT/proto2/Makefile
@@ -115,6 +115,9 @@ chi-zero-19937: sfmtDPza.cpp chi-zero.o
 get-charactorDPza-521: sfmtDPza.cpp get-charactor.cpp
 	${CPP} -o $@ sfmtDPza.cpp get-charactor.cpp ${LINKOPT}
 
+get2-charactorDPza-521: sfmtDPza.cpp get2-charactor.cpp
+	${CPP} -o $@ sfmtDPza.cpp get2-charactor.cpp ${LINKOPT}
+
 get-charactorDPza-1279: sfmtDPza.cpp get-charactor.cpp
 	${CPP} -o $@ sfmtDPza.cpp get-charactor.cpp ${LINKOPT}
 
