charactor weight ok
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@650 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto2/Makefile
+++ b/dSFMT/proto2/Makefile
@@ -37,8 +37,8 @@ shortest-baseDPza-521: sfmtDPza.cpp chk-shortest.o
 shortest-baseDPza-1279: sfmtDPza.cpp chk-shortest.o
 	${CPP} -o $@ sfmtDPza.cpp chk-shortest.o ${LINKOPT}
 
-chk-charac-DPza521: sfmtDPza2.cpp chk-charac.o
-	${CPP} -o $@ sfmtDPza2.cpp chk-charac.o ${LINKOPT}
+chk-charac-DPza521: sfmtDPza.cpp chk-charac.cpp
+	${CPP} -o $@ sfmtDPza.cpp chk-charac.cpp ${LINKOPT}
 
 chi-zero-521: sfmtDPza.cpp chi-zero.o
 	${CPP} -o $@ sfmtDPza.cpp chi-zero.o ${LINKOPT}
