tabun korede OK
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@653 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto2/Makefile
+++ b/dSFMT/proto2/Makefile
@@ -106,6 +106,9 @@ test-parityDPza-1279: sfmtDPza.cpp test-parity.cpp
 test-parityDPza-19937: sfmtDPza.cpp test-parity.cpp
 	${CPP} -o $@ sfmtDPza.cpp test-parity.cpp ${LINKOPT}
 
+test-parityDPza-44497: sfmtDPza.cpp test-parity.cpp
+	${CPP} -o $@ sfmtDPza.cpp test-parity.cpp ${LINKOPT}
+
 test-genDPza-521: sfmtDPza.cpp test-gen.cpp
 	${CPP} -o $@ sfmtDPza.cpp test-gen.cpp ${LINKOPT}
 
