--- a/jump/Makefile.me
+++ b/jump/Makefile.me
@@ -44,7 +44,7 @@ FILES = SFMTst.h \
 	test.c \
 	test-jump.cpp \
 	sample.c \
-	check.sh \
+	check-gen.sh \
 	check-jump.sh \
 	CHANGE-LOG.txt \
 	readme.html \
